添加运维中心License限制运维中心可用功能

--- a/app/views/irm/cloud_operations/show.html.erb
+++ b/app/views/irm/cloud_operations/show.html.erb
@@ -1,4 +1,4 @@
-<%= page_title(:model_meaning=>t(:label_irm_operation_unit)) %>
+<%= common_title(:model_meaning=>t(:label_irm_operation_unit)) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
