--- a/app/views/irm/cloud_operations/edit.html.erb
+++ b/app/views/irm/cloud_operations/edit.html.erb
@@ -1,2 +1,2 @@
-<%= page_title(:model_meaning=>t(:label_irm_operation_unit)) %>
+<%= common_title(:model_meaning=>t(:label_irm_operation_unit)) %>
 <%= render 'edit_form'%>
