fixed: 新建公告时主页Tab样式存在问题

--- a/public/themes/salesforce2/stylesheets/application.css
+++ b/public/themes/salesforce2/stylesheets/application.css
@@ -13,6 +13,7 @@ body #AppBodyHeader {background-image:none;}
     padding:0;
     width:100%;
 }
+#tabBar *{box-sizing: content-box !important;}
 .bPageHeader .phHeader .left .spacer, .bPageHeader .phHeader td.left {
 width:230px;
 }
