--- a/app/views/irm/wf_rules/_immediate_actions.html.erb
+++ b/app/views/irm/wf_rules/_immediate_actions.html.erb
@@ -26,7 +26,11 @@
               <div class='yui3-datatable-liner'>
 
                 <%= link_to(t(:edit),action[:edit_url_options].merge(:source_str=>"WF_RULE,#{action[:action].rule_id}",:back_url=>url_for({}))) %>
-                <%= link_to(t(:delete),{:action=>"destroy_action",:id=>action[:action].id,:back_url=>url_for({})},{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
+                <% unless wf_rule.enabled? %>
+                    <%= link_to(t(:delete),{:action=>"destroy_action",:id=>action[:action].id,:back_url=>url_for({})},{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
+                <% else %>
+                    <%= t(:delete) %>
+                <% end %>
                </div>
             </td>
             <td class="yui3-column">
