--- a/app/views/irm/wf_rules/index.html.erb
+++ b/app/views/irm/wf_rules/index.html.erb
@@ -19,11 +19,11 @@
       <div class="pbBody">
         <div id="wf_rules" class="datatable" style="width:100%">
           <div id="id" style="display:none">
-            <% link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %><%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %> | <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
           </div>
         </div>
         <%= datatable("wf_rules",url_for(:action=>"get_data",:format=>"json"),
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
+                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"90px"},
                        { :key => "bo_name", :label => t(:label_irm_wf_rule_bo_code),:searchable=>true },
                        { :key => "rule_code", :label => t(:label_irm_wf_rule_rule_code),:searchable=>true },
                        { :key => "name", :label => t(:label_irm_wf_rule_name),:searchable=>true },
