添加编辑状态转移翻译

--- a/app/views/icm/incident_statuses/edit_transform.html.erb
+++ b/app/views/icm/incident_statuses/edit_transform.html.erb
@@ -17,7 +17,7 @@
     text-align: right;
   }
 </style>
-<%= common_title %>
+<%= common_title(:action_meaning=>t(:label_icm_incident_status_edit_transform)) %>
 
 <%= form_tag({:action=>"update_transform"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
