--- a/app/views/icm/priority_codes/index.html.erb
+++ b/app/views/icm/priority_codes/index.html.erb
@@ -27,7 +27,7 @@
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_edit_transform) %></h2></td>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_priority_code) %></h2></td>
               <td  class="pbButton">
               </td>
               <td class="pbHelp">
