--- a/app/views/irm/global_settings/_edit_form.html.erb
+++ b/app/views/irm/global_settings/_edit_form.html.erb
@@ -1,6 +1,6 @@
 <%= common_title %>
 
-<%= form_for(@global_setting,:url=>{:action=>"update", :id => @global_setting},:builder => LabellingFormBuilder, :html => {:method => :put, :id => "edit_setting_form", :multipart => true}) do |f| %>
+<%= form_for("setting",:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:method => :put, :id => "edit_setting_form", :multipart => true}) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -16,7 +16,6 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @global_setting%>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
