添加报表类别分页

--- a/app/views/irm/report_type_categories/index.html.erb
+++ b/app/views/irm/report_type_categories/index.html.erb
@@ -27,8 +27,8 @@
                        { :key => "code", :label => t(:label_irm_report_type_category_code)},
                        { :key => "name", :label => t(:label_irm_report_type_category_name),:searchable=>true },
                        { :key => "description", :label => t(:label_irm_report_type_category_description)}
-                      ],{:paginator_box=>"report_type_categoriesPaginatorBox",:search_box=>"report_type_categoriesSearchBox"})%>
-        <div id="report_type_categoriesPaginatorBox"></div>
+                      ],{:paginator_box=>"categoriesPaginatorBox",:search_box=>"report_type_categoriesSearchBox"})%>
+        <div id="categoriesPaginatorBox"></div>
       </div>
     </div>
 </div>
