在人员新建，编辑页面移除称谓

--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -49,9 +49,8 @@
               <td class="dataCol"><%=@person[:region_name]%></td>
             </tr>
             <tr>
-              <td class="labelCol"><%=(t :label_irm_person_title)%></td>
-              <td class="dataCol">
-                <%=@person[:title_name]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
 
               <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
 
