--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -55,10 +55,8 @@
               <td class="dataCol"><%=@person[:region_name]%></td>
             </tr>
             <tr>
-              <td class="labelCol"><%=(t :label_irm_person_title)%></td>
-              <td class="dataCol">
-                <%=f.select :title,options_for_select(person_title,@person.title),
-                                                    {},{:required=>true,:id=>"irm_person_title"}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
 
               <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
 
