--- a/app/views/irm/external_system_members/index.html.erb
+++ b/app/views/irm/external_system_members/index.html.erb
@@ -1,4 +1,4 @@
-<%= common_title %>
+<%= common_title(:action_meaning=>t(:label_irm_external_system_add_people)) %>
 <style type="text/css">
   .processTitle {
       margin-bottom:15px;
