--- a/app/views/icm/impact_ranges/_new_form.html.erb
+++ b/app/views/icm/impact_ranges/_new_form.html.erb
@@ -40,14 +40,21 @@
             <tr>
               <td class="labelCol"><label for="impact_range_name"><%=(t :label_icm_impact_range_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true,:id=>"impact_range_name"%></td>
-              <td class="labelCol"><div><label for="impact_range_weight_values"><%=(t :label_icm_impact_range_weight_values)%></label></div></td>
-              <td class="dataCol"><div><%=f.text_field :weight_values,:required=>true,:id=>"impact_range_weight_values"%></div></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="impact_range_display_sequence"><%=(t :display_sequence)%></label></td>
               <td class="dataCol"><%=f.text_field :display_sequence, :required=>true,:id=>"impact_range_display_sequence"%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
+
               <td class="labelCol"><label for="impact_range_default_flag"><%=(t :default_flag)%></label></td>
               <td class="dataCol"><%=f.check_box :default_flag,:id=>"impact_range_default_flag"%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="impact_range_description"><%=t(:label_icm_impact_range_description)%></label></td>
