--- a/app/views/icm/impact_ranges/show.html.erb
+++ b/app/views/icm/impact_ranges/show.html.erb
@@ -28,14 +28,26 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_icm_impact_range_name)%></label></td>
               <td class="dataCol"><%= @impact_range[:name]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label><%=(t :label_icm_impact_range_weight_values)%></label></td>
               <td class="dataCol"><div><%= @impact_range.weight_values%></div></td>
+               <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label ><%=(t :display_sequence)%></label></td>
               <td class="dataCol"><%= @impact_range[:display_sequence]%></td>
+               <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label ><%=(t :default_flag)%></label></td>
               <td class="dataCol"><%= @impact_range[:default_flag]%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><%=t(:label_icm_impact_range_description)%></td>
