--- a/app/views/icm/urgence_codes/_new_form.html.erb
+++ b/app/views/icm/urgence_codes/_new_form.html.erb
@@ -32,29 +32,37 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
+
               <td class="labelCol"><label for="urgence_code_urgency_code"><%=(t :label_icm_urgence_code_urgency_code)%></label></td>
               <td class="dataCol"><%=f.text_field :urgency_code, :required=>true,:irm_uppercase=>true,:id=>"urgence_code_urgency_code"%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label  for="urgence_code_name"><%=(t :label_icm_urgence_code_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
-              <td class="labelCol"><label for="urgence_code_weight_value"><%=(t :label_icm_urgence_code_weight_values)%></label></td>
-              <td class="dataCol"><%=@urgence_code.weight_values%></td>
+              <td class="dataCol"><%=f.text_field :name,:value=>@urgence_code[:name], :required=>true,:id=>"urgence_code_name" %></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="urgence_code_display_sequence"><%=(t :display_sequence)%></label></td>
               <td class="dataCol"><%=f.text_field :display_sequence, :required=>true%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label for="urgence_code_default_flag"><%=(t :default_flag)%></label></td>
               <td class="dataCol"><%=f.check_box :default_flag%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="urgence_code_description"><%=(t :label_icm_urgence_code_description)%></label></td>
-              <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+              <td class="dataCol"><%=f.text_area :description,:value=>@urgence_code[:description],:rows=>4,:id=>"urgence_code_description"%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
+
         </tbody>
       </table>
     </div>
