fixed: 1. 个人密码修改时，新设置的密码和原密码一样，系统允许保存 如果用户设置新密码和原密码一样，系统应该提示“新密码不能和原密码一样”
2.
修改个人密码成功，系统没有提示消息，又返回密码修改界面，会让用户误解没有修改成功。
系统应该提示信息“密码已修改成功”

--- a/app/views/irm/my_password/edit_password.html.erb
+++ b/app/views/irm/my_password/edit_password.html.erb
@@ -16,6 +16,7 @@
   </div>
   <div class="pbBody">
     <%= error_for @identity%>
+    <%= flash_notice %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
