--- a/app/views/icm/close_reasons/_edit_form.html.erb
+++ b/app/views/icm/close_reasons/_edit_form.html.erb
@@ -32,13 +32,19 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=t(:label_icm_close_reason_close_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :close_code, :required=>true%></td>
+              <td class="dataCol"><%=f.text_field :close_code, :required=>true, :irm_uppercase => true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_icm_close_reason_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:description)%></label></td>
+              <td class="dataCol"><%=f.text_area :description, :rows => 4%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
