--- a/app/views/icm/close_reasons/_new_form.html.erb
+++ b/app/views/icm/close_reasons/_new_form.html.erb
@@ -45,8 +45,8 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
+              <td class="labelCol"><label><%=t(:description)%></label></td>
+              <td class="dataCol"><%=f.text_area :description, :rows => 4%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
