--- a/app/views/irm/organizations/_edit_form.html.erb
+++ b/app/views/irm/organizations/_edit_form.html.erb
@@ -34,7 +34,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_organization_short_name)%></label></td>
-              <td class="dataCol"><%=@organization.short_name%></td>
+              <td class="dataCol"><%=f.text_field :short_name, :required=>true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
