--- a/app/views/irm/organizations/_new_form.html.erb
+++ b/app/views/irm/organizations/_new_form.html.erb
@@ -39,7 +39,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_organization_short_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :short_name, :irm_uppercase=>true,:required=>true%></td>
+              <td class="dataCol"><%=f.text_field :short_name,:required=>true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
