--- a/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/app/views/icm/incident_requests/_customer_list.html.erb
@@ -14,7 +14,7 @@
         </div>
        <%= datatable("incident_requests",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:hidden=>true,:width=>"50px"},
-                       { :key => "request_number", :label => "#",:searchable=>true,:width=>"20px"},
+                       { :key => "request_number", :label => t(:label_icm_incident_request_request_number_shot),:searchable=>true,:width=>"20px"},
                        { :key => "title",:formatter=>"Y.irm.stemplate",:label => t(:label_icm_incident_request_title),:searchable=>true },
                        { :key => "incident_status_name",:hidden=>true },
                        { :key => "need_customer_reply",:hidden=>true },
