fixed: 外部系统定义中,IP地址和主机名没有验证，可以随便输入值，存在问题，需要修改： 1，IP地址必须按照IP地址的规范和数字进行验证 2，Hostname主机名不允许录入汉字或者特殊字符

--- a/app/views/irm/external_systems/_new_form.html.erb
+++ b/app/views/irm/external_systems/_new_form.html.erb
@@ -34,7 +34,7 @@
               <td class="labelCol"><label for="external_system_external_system_code"><%=t(:label_irm_external_system_external_system_code)%></label></td>
               <td class="dataCol"><%=f.text_field :external_system_code, :required=>true ,:irm_uppercase=>true,:id=>"external_system_external_system_code"%></td>
               <td class="labelCol"><label for="external_system_external_hostname"><%=t(:label_irm_external_system_external_hostname)%></label></td>
-              <td class="dataCol"><%=f.text_field :external_hostname, :required=>true ,:id=>"external_system_external_hostname"%></td>
+              <td class="dataCol"><%=f.text_field :external_hostname, :irm_chr_only => true, :required=>true ,:id=>"external_system_external_hostname"%></td>
             </tr>
 
             <tr>
