--- a/app/views/csi/surveys/show_result.html.erb
+++ b/app/views/csi/surveys/show_result.html.erb
@@ -12,7 +12,7 @@
 <div class="lightBlue">
     <div class="bPageTitle">
         <div style="background-color: rgb(23, 151, 192);" class="secondaryPalette">
-          <h1 class="title"><%= t(:label_csi_survey_info) %><%= @survey_code %>：&nbsp;&nbsp;<%=@survey_title%></h1>
+          <h1 class="title"><%= t(:label_csi_survey_info) %>：&nbsp;&nbsp;<%=@survey_title%></h1>
         </div>
     </div>
 </div>
