--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -16,12 +16,12 @@
                         <div class="inputbox">
                           <label><%=(t :label_irm_common_username)%></label>
                           <br>
-                          <span><%=text_field_tag :username,nil, :class => "txtbox", :id=>"userName",:span => true%></span>
+                          <span><%=text_field_tag :username,nil, :class => "txtbox", :id=>"userName",:autocomplete=>"off",:span => true%></span>
                         </div>
                         <div class="inputbox inputbox_password">
                           <label><%=(t :label_irm_common_password)%></label>
                           <br>
-                          <span><%=password_field_tag :password, nil, :class => "txtbox",:id=>"password", :span => true%></span>
+                          <span><%=password_field_tag :password, nil, :class => "txtbox",:id=>"password",:autocomplete=>"off", :span => true%></span>
                         </div>
                       </div>
                       <div class="rememberme_txt">
