--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -130,14 +130,14 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%= t(:label_irm_identity_password)%></label></td>
-              <td class="dataCol"><%=f.password_field(:password, :size=>40)%></td>
+              <td class="dataCol"><%=f.password_field(:password, :size=>40,:autocomplete=>"off")%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
 
             </tr>
             <tr>
               <td class="labelCol"><label><%= t(:label_irm_identity_password_confirmation)%></label></td>
-              <td class="dataCol"><%=f.password_field(:password_confirmation, :size=>40)%></td>
+              <td class="dataCol"><%=f.password_field(:password_confirmation, :size=>40,:autocomplete=>"off")%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
