--- a/app/views/irm/my_password/edit_password.html.erb
+++ b/app/views/irm/my_password/edit_password.html.erb
@@ -15,7 +15,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @identity%>
+    <%= error_for @person%>
     <%= flash_notice %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
