--- a/app/views/icm/urgence_codes/index.html.erb
+++ b/app/views/icm/urgence_codes/index.html.erb
@@ -32,7 +32,7 @@
                    {:key=>"name",:label=>t(:label_icm_urgence_code_name),:searchable=>true},
                    {:key=>"weight_values",:label=>t(:label_icm_urgence_code_weight_values),:sortable=>true},
                    {:key=>"display_sequence",:label=>t(:display_sequence),:sortable=>true},
-                   {:key=>"default_flag",:label=>t(:default_flag),:sortable=>true,:searchable=>true, :width => "80px"},
+                   {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template",:sortable=>true,:searchable=>true, :width => "40px"},
                    {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:sortable=>true,:width=>"70px"}],
                    {:paginator_box=>"urgencePaginator",:search_box=>"urgenceCodesSearchBox"})%>
         <div id="urgencePaginator"></div>
