fixed: 为公告栏目中已经设置好的某个栏目创建“子栏目”，点击“创建子栏目”按钮进入栏目创建界面， 此时应该自动带出“父栏目”，但是系统没有自动带出，还需要用户手工选择。 譬如为“普通公告”创建子栏目时，该子栏目的“父栏目”，系统应该自动为用户选择“普通公告”。

--- a/app/views/irm/bu_columns/edit.html.erb
+++ b/app/views/irm/bu_columns/edit.html.erb
@@ -32,7 +32,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_bu_column_parent)%></label></td>
-              <td class="data2Col"><%= lov_field_tag "irm_bu_columns", "BULLETIN_COLUMNS", :id => "parent_column_lov", :value => @bu_column.parent_column_id, :label_required => true %></td>
+              <td class="data2Col"><%=f.blank_select :parent_column_id, available_parentable_bu_columns(@bu_column.id), {}%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_bu_column_code)%></label></td>
